--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-
+/public/panagea/video
 /resources/admin/scss/css
 /storage/installed
 composer.lock
